Icon with text alignment fixed

--- a/components/LinkCard/LinkCard.module.scss
+++ b/components/LinkCard/LinkCard.module.scss
@@ -1,3 +1,9 @@
+.iconWithText {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
 .wrapper {
   background: #f8f9fa;
 
